--- a/context.html
+++ b/context.html
@@ -61,22 +61,6 @@ I grew up as a Chinese American in a small, predominantly white town <br><br>whe
     ];
 
     const staticGirl = `
-
-          ┌──────────────┒
-    ┌──────────────┒  ~~ ┃
-    │~ ~~       ~~~┃ A+  ┃              _.-"\\
-    │        100%  ┃     ┃          _.-"     \\
-    │     ~~ ~     ┃ ~ ~ ┃       ,-"          \\
-    │~~ ~~~  ~~~~  ┃  ~~ ┃      ( \\            \\
-    │~ ~~~   ~~  ~ ┃~  ~ ┃       ( \\            \\
-    │~~~~    ~~ ~~ ┃~~ ~ ┃        ( \\            \\
-    │~~  ~   ~~ ~  ┃ ~~~ ┃         ( \\            \\
-    │~ ~~    ~~~ ~~┃~~ ~ ┃          \\ \\         _.-;
-    │~ ~~~   ~ ~   ┃~~ ~ ┃           \\ \\    _.-"   :
-    │~~~           ┃─────┚            \\ \\,-"    _.-"
-    └──────────────┚                   \\(   _.-"
-                                        \`--"
-
          .-.                                          . - .
         / ^ \\                  . -౨ৎ.                // ^ \\\\
         \\   /                 // ^ \\\\               (_\\   /_)
@@ -100,10 +84,10 @@ I grew up as a Chinese American in a small, predominantly white town <br><br>whe
                               ╰───────,─────────────────╯
                     . -౨ৎ.     . - .
                    // ^ \\\\    // ^ \\\\
-                  ()\\   /()   /\\   /)
-                    .-'-.     \\.-'-.\\
-                   //   \\\\   ( |___|\\)
-                   '|___|'     /___\\'
+                  ()\\   /()   (\\   /)
+                    .-'-.     /.-'-.\\
+                   //   \\\\   (/|___|\\)
+                   '|___|'    '/___\\'
                      | |        | |
                      . .        . .`;
 
@@ -134,70 +118,62 @@ I grew up as a Chinese American in a small, predominantly white town <br><br>whe
     const staticNothing = `>`;
 
     const staticExpectations = `
-                                                   /\\
-                                                  /  \\           ╭╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╮
-                                                 /    \\          ╵                                                  ╵
-                                                /______\\         ╵                               |-|    *           ╵
-                                                |      |         ╵                               |-|   _    *  __   ╵
-                                                |[]  []|         ╵                               |-|   |  *    |/'  ╵
-                                                |______|         ╵                               |-|   |~*~~~o~|    ╵
-              __                                |  __  |         ╵                               |-|   |  O o *|    ╵
-             /  \\       ________________________|_/  \\_|__       ╵                              /___\\  |o___O__|    ╵
-            /    \\     /=========================/    \\===|      ╵                                                  ╵
-           /  []  \\   /=========================/  []  \\==|      ╵                                                  ╵
-          /________\\ /=========================/________\\=|      ╵              ______ ______                       ╵
-       *  |        |/==========================|        |=|     <             _/      Y      \\_                     ╵
-      *** |        |---------------------------|        |--      ╵           // ~~ ~~ | ~~ ~  \\\\                    ╵
-     *****| []  [] |  []  []   _____   []  []  | []  [] | |      ╵          // ~ ~ ~~ | ~~~ ~~ \\\\                   ╵
-    *******        |          /_____\\          |        | |      ╵         //________.|.________\\\\                  ╵
-   *********       |          |  |  |          |        | |      ╵        \`----------\`-'----------'                 ╵
-  ***********]  [] |  []  []  |  |  |  []  []  | []  [] | |      ╵                                                  ╵
- *************     |          |__|__|          |        | |      ╰╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╯
-***************    |-----------=====-----------|        |_|
-***************____|          |=====|          |________|
- *************               /=======\\
+    /\\                                         /\\
+   /  \\_______________________________________/  \\
+  /    \\=====================================/    \\        ╭╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╮
+ /  []  \\===================================/  []  \\       ╵                                          ╵
+/________\\=================================/________\\      ╵              ______ ______               ╵
+|        |=================================|        |     <             _/      V      \\_             ╵
+|        |-------------- ___ --------------|        |      ╵           //       |       \\\\            ╵
+| []  [] |  []     []   /   \\   []     []  | []  [] |      ╵          //        |        \\\\           ╵
+|        |             /_____\\             |        |      ╵         //_________|_________\\\\          ╵
+|        |             |  |  |             |        |      ╵         ----------'-'----------          ╵
+| []  [] |  []     []  |  |  |  []     []  | []  [] |      ╵                                          ╵
+|        |             |__|__|             |        |      ╰╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╯
+|        |--------------=====--------------|        |
+|________|             /=====\\             |________|
 
 
 
-                             ╭╶╶╶^╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╮
-                             ╵                            ╭─────────────╮    ╵
-                             ╵                            │ You must be │    ╵
-                             ╵                            │ really good │    ╵
-                             ╵                    . - .   │   at math   │    ╵
-                             ╵                   (/ ^ \\)  ,─────────────╯    ╵
-                             ╵                   (_\\ /_)                     ╵
-                             ╵     . -౨ৎ.         .-'-.                      ╵
-                             ╵    // ^ \\\\      __/(   )\\\\                    ╵
-                             ╵   ()\\   /()     --/ )=( //                    ╵
-                             ╵     .-'-.          /   \\                      ╵
-                             ╵    //   \\\\         |   |                      ╵
-                             ╵    '|___|'         |___|                      ╵
-                             ╵      | |            \\|/                       ╵
-                             ╵      . .            /Y\\                       ╵
-                             ╵                                               ╵
-                             ╰╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╯
+                       ╭╶╶╶^╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╮
+                       ╵                            ╭─────────────╮    ╵
+                       ╵                            │ You must be │    ╵
+                       ╵                            │ really good │    ╵
+                       ╵                    . - .   │   at math   │    ╵
+                       ╵                   (/ ^ \\)  ,─────────────╯    ╵
+                       ╵                   (_\\ /_)                     ╵
+                       ╵     . -౨ৎ.         .-'-.                      ╵
+                       ╵    // ^ \\\\      __/(   )\\\\                    ╵
+                       ╵   ()\\   /()     --/ )=( //                    ╵
+                       ╵     .-'-.          /   \\                      ╵
+                       ╵    //   \\\\         |   |                      ╵
+                       ╵    '|___|'         |___|                      ╵
+                       ╵      | |            \\|/                       ╵
+                       ╵      . .            /Y\\                       ╵
+                       ╵                                               ╵
+                       ╰╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╯
 `;
 
     const staticHome = `                                                  ╭╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╶╮
                                                   ╵                                                                             ╵
-                                                  ╵             {}       I.                                                     ╵
+                                                  ╵             {}       I\\                                                     ╵
                                                   ╵            oIIo      |:                                                     ╵
                                                   ╵            oIIo      |:                                                     ╵
-                                   []=++-         ╵             ||       |:                                                     ╵
-                                   II___|         ╵             ||       |:                                                     ╵
-                                   ||  |          ╵             ||       |:                                                     ╵
-                  _________________||  |___       ╵            _||_      |:                                                     ╵
-                 /^^^^^^,-.^^^^^^^^\\|__|^^^\\      ╵          .' || \`.    |:      ____________________________________           ╵
-                /     ,',-.\`.               \\     ╵         /   ||   \\   |:     |\\                                    \\         ╵
-               /    ,','   \`.\`.     ,-"""-.  \\    ╵        |    ::    |  |:     | \\                                    \\        ╵
-              /___,','__   __\`.\`.__/_,"T"._\\__\\   ╵        )_   ::   _(  |:     |  \\____________________________________\\       ╵
-              |='-'||/\\| |^^||\`-\`=|_|_|_|_|=|     ╵         _)( :: )(_   |:     |  |             _---_ _---__           |       ╵
-              |= = ||)(| |__||= ==|_|_|_|_|=|     ╵        ) ._)::(_. (  |:     |  |            |=====|=====|           |       ╵
-              |= ==|"""" """"| = =____= =_==|    <        /     II     \\ |:     |  |            |=====|=====|           |       ╵
-              |== =| __   __ |= =| [] | |^|=|     ╵       |  .-.||     | |:     |  |  __________|_---_|_---_|_________  |       ╵
-              |= ==||/\\| |==||== |   o|=|_| |     ╵        \\(___)(    /  |:     |  |  ________________________________  |       ╵
-              |== =||)(| |  || = | == | == =|     ╵         \`.__\\/__.'   I'     |   \\ \\________________________________\\ \\      ╵
-              |= ==|"""" """"|== |____|= = =|     ╵                             |  , | |\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\| |     ╵
+                                     ____         ╵             ||       |:                                                     ╵
+                                    |____|        ╵             ||       |:                                                     ╵
+                                     |  |         ╵             ||       |:                                                     ╵
+                  ___________________|  |_        ╵            _||_      |:                                                     ╵
+                 /     .-.           |__| \\       ╵          .' || \`.    |:      ____________________________________           ╵
+                /    .'.-.'.               \\      ╵         /   ||   \\   |:     |\\                                    \\         ╵
+               /   .'.'   '.'.    ,-'''-.   \\     ╵        |    ::    |  |:     | \\                                    \\        ╵
+              /__.'. __   __ .'._/_______\\___\\    ╵        )_   ::   _(  |:     |  \\____________________________________\\       ╵
+              |    ||  | |  ||   |_|_|_|_|  |     ╵         _)( :: )(_   |:     |  |             _---_ _---__           |       ╵
+              |    ||  | |__||   |_|_|_|_|  |     ╵        )  _)::(_  (  |:     |  |            |=====|=====|           |       ╵
+              |    |"""" """"|    ____   _  |    <        /     ++     \\ |:     |  |            |=====|=====|           |       ╵
+              |    | __   __ |   | [] | | | |     ╵       |     ||     | |:     |  |  __________|_---_|_---_|_________  |       ╵
+              |    ||  | |  ||   |   o| |_| |     ╵        \\ .-.)(    /  |!     |  |  ________________________________  |       ╵
+              |    ||  | |  ||   |    |     |     ╵         (___\\/__.'   I'     |   \\ \\________________________________\\ \\      ╵
+              |    |"""" """"|   |____|     |     ╵                             |  , | |\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\| |     ╵
               """""|_________|"""'====\`""""""     ╵                             |  |\\  ,--------------------------------, |     ╵
                                                   ╵                             |  ||| |                               || |     ╵
                                                   ╵                              \\ ||| |            _  _  _            || |     ╵
@@ -349,12 +325,12 @@ I grew up as a Chinese American in a small, predominantly white town <br><br>whe
       walking = false;
       girl.textContent = staticGirl;
     } else if (clickCount === 2) {
-        narrative.textContent = "I remember being asked...";
+        narrative.textContent = "I remember constantly being asked...";
         clearInterval(walkInterval);
         walking = false;
         girl.textContent = staticDog;
     } else if (clickCount === 3) {
-        narrative.textContent = "or being told...";
+        narrative.textContent = "or being mocked...";
         clearInterval(walkInterval);
         walking = false;
         girl.textContent = staticChing;
@@ -364,7 +340,7 @@ I grew up as a Chinese American in a small, predominantly white town <br><br>whe
         walking = false;
         girl.textContent = staticNothing;
     } else if (clickCount === 5) {
-        narrative.innerHTML = "But stereotypes didn’t just come from those who saw me as an outsider.<br><br>They also came from those closest to me: my own family, my own community.";
+        narrative.innerHTML = "But these stereotypes, assumptions, and expectations didn’t just come from those who saw me as an outsider.<br><br>They also came from those closest to me: my own family, my own culure.";
         clearInterval(walkInterval);
         walking = false;
         girl.textContent = staticNothing;
@@ -374,12 +350,12 @@ I grew up as a Chinese American in a small, predominantly white town <br><br>whe
         walking = false;
         girl.textContent = staticExpectations;
     } else if (clickCount === 7) {
-        narrative.textContent = "At home, I was expected to be obedient, to excel, to bring pride to my family.";
+        narrative.textContent = "At home, I was expected to be obedient, to be poised, to bring pride to my family, and to mask my negative emotions.";
         clearInterval(walkInterval);
         walking = false;
         girl.textContent = staticHome;
     } else if (clickCount === 8) {
-        narrative.innerHTML = "My childhood was mostly measured in hours — hours spent at the piano, hours spent with the violin.<br><br>Three hours for one, three hours for the other, every single day.<br><br>While other kids played outside, I was perfecting scales, etudes, concertos.<br><br>There was always more to practice, always more to prove.<br><br>I carried the weight of expectation on my small shoulders, the pressure to be exceptional, to be worthy.<br><br><br><br>To be enough.";
+        narrative.innerHTML = "During middle and high school, I was surrounded by people who already formed their own friend groups.";
         clearInterval(walkInterval);
         walking = false;
         girl.textContent = staticMusic;
