--- a/monitor1.html
+++ b/monitor1.html
@@ -131,7 +131,7 @@ function toggleMonitor1() {
         currentScreen++;
       }
       else {
-        window.location.href = "childhood.html";
+        window.location.href = "context.html";
       }
     }
   </script>
