--- a/context2.html
+++ b/context2.html
@@ -64,6 +64,22 @@ I was often picked on for my race and appearance.
 
 While teachers assumed I was smart, my classmates labeled me as an overachiever.
         </div>
+
+                                                 .
+                                          ______/ \______
+                    _____________________/     /   \     \______________________
+                   /                    /     /  O  \     \                     \
+                  /                    /     /       \     \                     \
+                 /                    /_____/         \_____\                     \
+                /______________________ |                  | ______________________\
+                  |   ___   ___   ___   |  ___   __   ___  |   ___   ___   ___   |
+                  |  |   | |   | |   |  | |   | |  | |   | |  |   | |   | |   |  |
+                  |  '---' '---' '---'  | '---' '--' '---' |  '---' '---' '---'  |
+                  |   ___   ___   ___   |      ______      |   ___   ___   ___   |
+                  |  |   | |   | |   |  |     |      |     |  |   | |   | |   |  |
+                  |  '---' '---' '---'  |     |      |     |  '---' '---' '---'  |
+                  |_____________________|_____|______|_____|_____________________|
+
                          .-.                                          . - .
                         / ^ \                  . -౨ৎ.                // ^ \\
                         \   /                 // ^ \\               (_\   /_)
@@ -83,18 +99,29 @@ While teachers assumed I was smart, my classmates labeled me as an overachiever.
       </pre>
       <pre class="pointer" style=" display: none;" id="self3" onclick="nextFrame('self3')">
         <div style="text-align: center;">
-I was constantly asked by a group of boys if my parents ate cats and dogs.
+I was constantly asked by the same group of boys if my parents ate cats and dogs.
 
 Another student would constantly mock me, saying slurs like "ching chong" to imitate the Chinese language.
         </div>
-                                          . -౨ৎ.        .-.
-                                         // ^ \\       / ^ \
-                                        ()\   /()      \   /
-                                          .-'-.     <--.-'-.
-                                         //   \\       |___|\
-                                         '|___|'       | | |'
-                                           | |         |_|_|
-                                           . .          . .
+
+
+                                        .-.             .-.
+                                       / ^ \.-.     .-./ ^ \
+                                       \   / ^ \.-./ ^ \   /
+                                       .-'-\   / ^ \   /-'-.
+                                      /|___.-'-\   /-'-.___|\
+                                      '| |/|___.-'-.___|\|_|'
+                                       |_|'|_|/|___|\| |' |
+                                        . . | '| | |'|_|. .
+                                            . .|_|_|. .
+                                        . -౨ৎ.  . .   .-.
+                                       // ^ \\       / ^ \
+                                      ()\   /()      \   /
+                                        .-'-.     <--.-'-.
+                                       //   \\       |___|\
+                                       '|___|'       | | |'
+                                         | |         |_|_|
+                                         . .          . .
       </pre>
       <pre class="pointer" style=" display: none;" id="self4" onclick="nextFrame('self4')">
         <div style="text-align: center;">
