--- a/crossing.html
+++ b/crossing.html
@@ -32,21 +32,20 @@
 ╚════════════════════╝
       </pre>
       <pre>
-
-    __                                         __
-   /  \_______________________________________/  \
-  /    \=====================================/    \
- /  []  \===================================/  []  \
-/________\=================================/________\
-|        |=================================|        |
-|        |-------------- ___ --------------|        |
-| []  [] |  []     []   /   \   []     []  | []  [] |
-|        |             /_____\             |        |
-|        |             |  |  |             |        |
-| []  [] |  []     []  |  |  |  []     []  | []  [] |
-|        |             |__|__|             |        |
-|        |--------------=====--------------|        |
-|________|             /=====\             |________|</pre>
+                                 .
+                          ______/ \______
+    _____________________/     /   \     \______________________
+   /                    /     /  O  \     \                     \
+  /                    /     /       \     \                     \
+ /                    /_____/         \_____\                     \
+/______________________ |                  | ______________________\
+  |   ___   ___   ___   |  ___   __   ___  |   ___   ___   ___   |
+  |  |   | |   | |   |  | |   | |  | |   | |  |   | |   | |   |  |
+  |  '---' '---' '---'  | '---' '--' '---' |  '---' '---' '---'  |
+  |   ___   ___   ___   |      ______      |   ___   ___   ___   |
+  |  |   | |   | |   |  |     |      |     |  |   | |   | |   |  |
+  |  '---' '---' '---'  |     |      |     |  '---' '---' '---'  |
+  |_____________________|_____|______|_____|_____________________|</pre>
       <pre id="street">
 
 _______________________________  ,--. _______________________  ,--. __________  ,--. ______________________________________
