--- a/letters.html
+++ b/letters.html
@@ -1719,24 +1719,18 @@ function colorBows() {
 }
 
 colorBows();
-
-under updateframes
-
-1:
-Growing up as a Chinese American in a small, predominantly white town in Pennsylvania,
-I often found myself defined by stereotypes before I even had the chance to introduce myself.
-
-2:
-From an early age, it became clear that many people around me had already set an idea of who I was,
-not because they knew me personally, but because of how I looked and the fact that I was Chinese.
-
-3:
-Some of these stereotypes were very common: a straight-A student, naturally gifted at math, and eating cats and dogs for dinner.
-
-4:
-Whether intentional or not, these comments reinforced the idea into my childhood that I was different,
-that I somehow did not belong to the world.
-
-5:
-The embarrassment, the shame, the feeling of being hyper-visible and invisible all at the same time.
-These assumptions led to a lot of pressure and negative thoughts that loom over me, which eventually led to social anxiety. So much so that I considered the isolations during the COVID-19 pandemic to be one of the best and most peaceful years of my life prior to starting college, solely because of the fact I did not have to see anyone and could remain in the solitude and peace that I have found in my house and space with my beloved parents.
+<pre>
+                                 .
+                          ______/ \______
+    _____________________/     /   \     \______________________
+   /                    /     /  O  \     \                     \
+  /                    /     /       \     \                     \
+ /                    /_____/         \_____\                     \
+/______________________ |                  | ______________________\
+  |   ___   ___   ___   |  ___   __   ___  |   ___   ___   ___   |
+  |  |   | |   | |   |  | |   | |  | |   | |  |   | |   | |   |  |
+  |  '---' '---' '---'  | '---' '--' '---' |  '---' '---' '---'  |
+  |   ___   ___   ___   |      ______      |   ___   ___   ___   |
+  |  |   | |   | |   |  |     |      |     |  |   | |   | |   |  |
+  |  '---' '---' '---'  |     |      |     |  '---' '---' '---'  |
+  |_____________________|_____|______|_____|_____________________|</pre>
