--- a/roadToHome.html
+++ b/roadToHome.html
@@ -55,22 +55,20 @@
         |                     |    |________|    |                     |
         |_____________________|____/--------\____|_____________________|</pre> -->
       <pre id="school">
-    /\                                         /\
-   /  \_______________________________________/  \
-  /    \=====================================/    \
- /  []  \===================================/  []  \
-/________\=================================/________\
-|        |=================================|        |
-|        |-------------- ___ --------------|        |
-| []  [] |  []     []   /   \   []     []  | []  [] |
-|        |             /_____\             |        |
-|        |             |  |  |             |        |
-| []  [] |  []     []  |  |  |  []     []  | []  [] |
-|        |             |__|__|             |        |
-|        |--------------=====--------------|        |
-|________|             /=====\             |________|
-
-                         웃</pre>
+                                 .
+                          ______/ \______
+    _____________________/     /   \     \______________________
+   /                    /     /  O  \     \                     \
+  /                    /     /       \     \                     \
+ /                    /_____/         \_____\                     \
+/______________________ |                  | ______________________\
+  |   ___   ___   ___   |  ___   __   ___  |   ___   ___   ___   |
+  |  |   | |   | |   |  | |   | |  | |   | |  |   | |   | |   |  |
+  |  '---' '---' '---'  | '---' '--' '---' |  '---' '---' '---'  |
+  |   ___   ___   ___   |      ______      |   ___   ___   ___   |
+  |  |   | |   | |   |  |     |      |     |  |   | |   | |   |  |
+  |  '---' '---' '---'  |     |      |     |  '---' '---' '---'  |
+  |_____________________|_____|______|_____|_____________________|</pre>
       <pre id="self">
                 웃웃                                      웃웃웃                                                웃웃
 _______________________________  ,--. _______________________  ,--. __________  ,--. ______________________________________
