--- a/afternoon.html
+++ b/afternoon.html
@@ -29,9 +29,40 @@
     opacity: 1;
     transition: opacity 1s ease-in-out;
   }
+
+  #context, #words_context {
+    position: fixed;
+    top: 0;
+    left: 50px;
+    margin: 0;
+    padding: 10px;
+    font-family: monospace;
+  }
+
+  #words_context {
+    display: none;
+  }
+
+  #context:hover {
+    display: none;
+  }
+
+  #context:hover + #words_context {
+    display: block;
+  }
 </style>
 <body>
   <div id="fade-in"></div>
+  <pre class="time" id="context">
+╭╶╶╶╶╮
+: ౨ৎ :
+╰╶╶╶╶╯
+  </pre>
+  <pre class="time" id="words_context">
+
+Context
+
+  </pre>
   <div id="container">
     <div id="container">
       <pre class="time" id="clock">
@@ -45,9 +76,9 @@
 
 
 
-        .------- , -. .          .-------------.          .-------------.
+        .------- ,౨ৎ. .          .-------------.          .-------------.
         |\      ( /  \ \         |\             \         |\             \
-         \\____ (𐙚)  / _\         \\_____________\         \\_____________\
+         \\____ ( )  / _\         \\_____________\         \\_____________\
           \,----- -'- --'          \,------------'          \,------------'
                  / | \
               .-------------.          .-------------.          .-------------.
@@ -66,9 +97,9 @@
 
 
 
-        .--------- , -.          .-------------.          .-------------.
+        .--------- ,౨ৎ.          .-------------.          .-------------.
         |\        ( /  \         |\             \         |\             \
-         \\______ (𐙚)  /          \\_____________\         \\_____________\
+         \\______ ( )  /          \\_____________\         \\_____________\
           \,------- -'- '          \,------------'          \,------------'
                    / | \
               .-------------.          .-------------.          .-------------.
@@ -87,9 +118,9 @@
 
 
 
-        .----------- , -.        .-------------.          .-------------.
+        .----------- ,౨ৎ.        .-------------.          .-------------.
         |\          ( /  \       |\             \         |\             \
-         \\________ (𐙚)  /        \\_____________\         \\_____________\
+         \\________ ( )  /        \\_____________\         \\_____________\
           \,--------- -'-          \,------------'          \,------------'
                      / | \
               .-------------.          .-------------.          .-------------.
@@ -108,9 +139,9 @@
 
 
 
-        .------------- , -.      .-------------.          .-------------.
+        .------------- ,౨ৎ.      .-------------.          .-------------.
         |\            ( /  \     |\             \         |\             \
-         \\__________ (𐙚)  /      \\_____________\         \\_____________\
+         \\__________ ( )  /      \\_____________\         \\_____________\
           \,----------- -'-        \,------------'          \,------------'
                        / | \
               .-------------.          .-------------.          .-------------.
@@ -129,9 +160,9 @@
                                                                                       \
                                                                                       .
                                                                                       |
-        .-------------.  , -.    .-------------.          .-------------.
+        .-------------.  ,౨ৎ.    .-------------.          .-------------.
         |\              ( /  \   |\             \         |\             \
-         \\____________ (𐙚)  /    \\_____________\         \\_____________\
+         \\____________ ( )  /    \\_____________\         \\_____________\
           \,------------' -'-      \,------------'          \,------------'
                          / | \
               .-------------.|         .-------------.          .-------------.
@@ -150,9 +181,9 @@
                                                                                     \
                                                                                     .-
                                                                                     |_|
-        .-------------.    , -.  .-------------.          .-------------.
+        .-------------.    ,౨ৎ.  .-------------.          .-------------.
         |\             \  ( /  \ |\             \         |\             \
-         \\_____________\ (𐙚)  /  \\_____________\         \\_____________\
+         \\_____________\ ( )  /  \\_____________\         \\_____________\
           \,------------'   -'-    \,------------'          \,------------'
                            / | \
               .-------------.o_|       .-------------.          .-------------.
@@ -171,9 +202,9 @@
                                                                                  \  (
                                                                                  .-'-
                                                                                  |_|_
-        .-------------.      , -. -------------.          .-------------.        |_o_
+        .-------------.      ,౨ৎ. -------------.          .-------------.        |_o_
         |\             \    ( /  \              \         |\             \         ╳
-         \\_____________\   (𐙚)  / \_____________\         \\_____________\       . .
+         \\_____________\   ( )  / \_____________\         \\_____________\       . .
           \,------------'     -'-  \,------------'          \,------------'
                              / | \
               .-------------.|_o_|     .-------------.          .-------------.
@@ -192,9 +223,9 @@
                                                                                \  (__
                                                                                .-'-.
                                                                                |_|_|
-        .-------------.        , -. -----------.          .-------------.      |_o_|
+        .-------------.        ,౨ৎ. -----------.          .-------------.      |_o_|
         |\             \      ( /  \            \         |\             \      ╱ ╲
-         \\_____________\     (𐙚)  / ____________\         \\_____________\    .   .
+         \\_____________\     ( )  / ____________\         \\_____________\    .   .
           \,------------'       -'-  ------------'          \,------------'
                                / | \
               .-------------.  |_o_|   .-------------.          .-------------.
@@ -213,9 +244,9 @@
                                                                              \  (__)
                                                                              .-'-.
                                                                              |_|_|
-        .-------------.          , -. ---------.          .-------------.    |_o_|
+        .-------------.          ,౨ৎ. ---------.          .-------------.    |_o_|
         |\             \        ( /  \          \         |\             \     ╳
-         \\_____________\       (𐙚)  / __________\         \\_____________\   . .
+         \\_____________\       ( )  / __________\         \\_____________\   . .
           \,------------'         -'-  ----------'          \,------------'
                                  / | \
               .-------------.    |_o_| .-------------.          .-------------.
@@ -234,9 +265,9 @@
                                                                            \  (__)
                                                                            .-'-.
                                                                            |_|_|
-        .-------------.          . , -. -------.          .-------------.  |_o_|
+        .-------------.          . ,౨ৎ. -------.          .-------------.  |_o_|
         |\             \          ( /  \        \         |\             \  ╱ ╲
-         \\_____________\         (𐙚)  / ________\         \\_____________\.   .
+         \\_____________\         ( )  / ________\         \\_____________\.   .
           \,------------'           -'-  --------'          \,------------'
                                    / | \
               .-------------.      |_o_.-------------.          .-------------.
@@ -255,9 +286,9 @@
                                                                          \  (__)
                                                                          .-'-.
                                                                          |_|_|
-        .-------------.          .-- , -. -----.          .-------------.|_o_|
+        .-------------.          .-- ,౨ৎ. -----.          .-------------.|_o_|
         |\             \         |\ ( /  \      \         |\             \ ╳
-         \\_____________\         \\(𐙚)  / ______\         \\_____________\ .
+         \\_____________\         \\( )  / ______\         \\_____________\ .
           \,------------'          \, -'-  ------'          \,------------'
                                      / | \
               .-------------.        |_.-------------.          .-------------.
@@ -276,9 +307,9 @@
                                                                        \  (__)
                                                                        .-'-.
                                                                        |_|_|
-        .-------------.          .---- , -. ---.          .-------------.o_|
+        .-------------.          .---- ,౨ৎ. ---.          .-------------.o_|
         |\             \         |\   ( /  \    \         |\             \╲
-         \\_____________\         \\_ (𐙚)  / ____\         \\_____________\.
+         \\_____________\         \\_ ( )  / ____\         \\_____________\.
           \,------------'          \,-- -'-  ----'          \,------------'
                                        / | \
               .-------------.          .-------------.          .-------------.
@@ -297,9 +328,9 @@
                                                                      \  (__)
                                                                      .-'-.
                                                                      |_|_|
-        .-------------.          .------ , -. -.          .-------------.|
+        .-------------.          .------ ,౨ৎ. -.          .-------------.|
         |\             \         |\     ( /  \  \         |\             \
-         \\_____________\         \\___ (𐙚)  / __\         \\_____________\
+         \\_____________\         \\___ ( )  / __\         \\_____________\
           \,------------'          \,---- -'-  --'          \,------------'
                                          / | \
               .-------------.          .-------------.          .-------------.
@@ -1028,7 +1059,40 @@
       setTimeout(playFrames, delay);
     }
 
-playFrames();
+    playFrames();
+
+    function colorBows() {
+      const pres = document.querySelectorAll("pre");
+      pres.forEach(pre => {
+        pre.innerHTML = pre.innerHTML.replaceAll("౨ৎ", `<span style="color: #F18AC1;">౨ৎ</span>`);
+      });
+    }
+
+    colorBows();
+
+    function fadeToBlackAndRedirect() {
+     let fadeOverlay = document.createElement("div");
+     fadeOverlay.style.position = "fixed";
+     fadeOverlay.style.top = "0";
+     fadeOverlay.style.left = "0";
+     fadeOverlay.style.width = "100%";
+     fadeOverlay.style.height = "100%";
+     fadeOverlay.style.background = "black";
+     fadeOverlay.style.opacity = "0";
+     fadeOverlay.style.transition = "opacity 2s ease-in-out";
+     document.body.appendChild(fadeOverlay);
+
+     setTimeout(() => {
+       fadeOverlay.style.opacity = "1";
+     }, 10);
+
+     setTimeout(() => {
+       window.location.href = "context.html";
+     }, 2000);
+   }
+
+   document.getElementById("context").addEventListener("click", fadeToBlackAndRedirect);
+   document.getElementById("words_context").addEventListener("click", fadeToBlackAndRedirect);
   </script>
 </body>
 </html>
