--- a/classroom.html
+++ b/classroom.html
@@ -29,9 +29,40 @@
     opacity: 1;
     transition: opacity 1s ease-in-out;
   }
+
+  #context, #words_context {
+    position: fixed;
+    top: 0;
+    left: 50px;
+    margin: 0;
+    padding: 10px;
+    font-family: monospace;
+  }
+
+  #words_context {
+    display: none;
+  }
+
+  #context:hover {
+    display: none;
+  }
+
+  #context:hover + #words_context {
+    display: block;
+  }
 </style>
 <body>
   <div id="fade-in"></div>
+  <pre class="time" id="context">
+╭╶╶╶╶╮
+: ౨ৎ :
+╰╶╶╶╶╯
+  </pre>
+  <pre class="time" id="words_context">
+
+Context
+
+  </pre>
   <div id="container">
     <div id="container">
       <pre class="time" id="clock">
@@ -1221,7 +1252,31 @@
       setTimeout(playFrames, delay);
     }
 
-playFrames();
+    playFrames();
+
+    function fadeToBlackAndRedirect() {
+     let fadeOverlay = document.createElement("div");
+     fadeOverlay.style.position = "fixed";
+     fadeOverlay.style.top = "0";
+     fadeOverlay.style.left = "0";
+     fadeOverlay.style.width = "100%";
+     fadeOverlay.style.height = "100%";
+     fadeOverlay.style.background = "black";
+     fadeOverlay.style.opacity = "0";
+     fadeOverlay.style.transition = "opacity 2s ease-in-out";
+     document.body.appendChild(fadeOverlay);
+
+     setTimeout(() => {
+       fadeOverlay.style.opacity = "1";
+     }, 10);
+
+     setTimeout(() => {
+       window.location.href = "context.html";
+     }, 2000);
+   }
+
+   document.getElementById("context").addEventListener("click", fadeToBlackAndRedirect);
+   document.getElementById("words_context").addEventListener("click", fadeToBlackAndRedirect);
   </script>
 </body>
 </html>
