--- a/crossing.html
+++ b/crossing.html
@@ -19,11 +19,43 @@
   }
 
   #moving-person {
-    position: relative; /* Ensures transform works properly */
-    display: inline-block; /* Prevents unwanted text-related issues */
-}
+    position: relative;
+    display: inline-block;
+  }
+
+  #context, #words_context {
+    position: fixed;
+    top: 0;
+    left: 50px;
+    margin: 0;
+    padding: 10px;
+    font-family: monospace;
+  }
+
+  #words_context {
+    display: none;
+  }
+
+  #context:hover {
+    display: none;
+  }
+
+  #context:hover + #words_context {
+    display: block;
+  }
   </style>
 <body>
+  <div id="fade-in"></div>
+  <pre class="time" id="context">
+╭╶╶╶╶╮
+: ౨ৎ :
+╰╶╶╶╶╯
+  </pre>
+  <pre class="time" id="words_context">
+
+Context
+
+  </pre>
   <div id="container">
     <div id="container">
       <pre class="time" id="clock">
@@ -32,12 +64,11 @@
 ╚════════════════════╝
       </pre>
       <pre>
-                                 .
-                          ______/ \______
-    _____________________/     /   \     \______________________
-   /                    /     /  O  \     \                     \
-  /                    /     /       \     \                     \
- /                    /_____/         \_____\                     \
+                           ______/\______
+    ______________________/     /  \     \______________________
+   /                     /     / () \     \                     \
+  /                     /     /      \     \                     \
+ /                     /_____/        \_____\                     \
 /______________________ |                  | ______________________\
   |   ___   ___   ___   |  ___   __   ___  |   ___   ___   ___   |
   |  |   | |   | |   |  | |   | |  | |   | |  |   | |   | |   |  |
@@ -738,6 +769,30 @@ Someone please let me cross...
       }
 
       setInterval(updatestreet, 500);
+
+      function fadeToBlackAndRedirect() {
+       let fadeOverlay = document.createElement("div");
+       fadeOverlay.style.position = "fixed";
+       fadeOverlay.style.top = "0";
+       fadeOverlay.style.left = "0";
+       fadeOverlay.style.width = "100%";
+       fadeOverlay.style.height = "100%";
+       fadeOverlay.style.background = "black";
+       fadeOverlay.style.opacity = "0";
+       fadeOverlay.style.transition = "opacity 2s ease-in-out";
+       document.body.appendChild(fadeOverlay);
+
+       setTimeout(() => {
+         fadeOverlay.style.opacity = "1";
+       }, 10);
+
+       setTimeout(() => {
+         window.location.href = "context.html";
+       }, 2000);
+     }
+
+     document.getElementById("context").addEventListener("click", fadeToBlackAndRedirect);
+     document.getElementById("words_context").addEventListener("click", fadeToBlackAndRedirect);
   </script>
 </body>
 </html>
