--- a/mirror.html
+++ b/mirror.html
@@ -41,18 +41,45 @@
     pointer-events: none;
   }
 
-  .pink-bow {
-    color: #ff69b4; /* Hot pink! You can change this to another shade if you prefer */
+  #context, #words_context {
+    position: fixed;
+    top: 0;
+    left: 50px;
+    margin: 0;
+    padding: 10px;
+    font-family: monospace;
+  }
+
+  #words_context {
+    display: none;
+  }
+
+  #context:hover {
+    display: none;
+  }
+
+  #context:hover + #words_context {
+    display: block;
   }
 </style>
 <body>
   <div id="fade-in"></div>
+  <pre class="time" id="context">
+╭╶╶╶╶╮
+: ౨ৎ :
+╰╶╶╶╶╯
+  </pre>
+  <pre class="time" id="words_context">
+
+Context
+
+  </pre>
   <div id="container">
     <div id="container">
       <pre class="time" id="clock">
-╔════════════════════╗
-║ Tuesday? │ 7:00 AM ║
-╚════════════════════╝
+╔══════════════════╗
+║ ███day │ 7:00 AM ║
+╚══════════════════╝
       </pre>
       <pre id="ascii-mirror">
         ,/───`\
@@ -207,9 +234,9 @@ The colors don't match... and my hair looks awful.
         }
         document.getElementById("ascii-mirror").textContent = step.newMirror;
         document.getElementById("clock").textContent = `
-╔═══════════════════╗
-║ Tuesday │ ${step.newTime} ║
-╚═══════════════════╝`;
+╔══════════════════╗
+║ ███day │ ${step.newTime} ║
+╚══════════════════╝`;
       }, 2000);
     }
 
@@ -223,5 +250,30 @@ The colors don't match... and my hair looks awful.
         window.location.href = "hallway.html";
       }, 2000);
     });
+
+    function fadeToBlackAndRedirect() {
+     let fadeOverlay = document.createElement("div");
+     fadeOverlay.style.position = "fixed";
+     fadeOverlay.style.top = "0";
+     fadeOverlay.style.left = "0";
+     fadeOverlay.style.width = "100%";
+     fadeOverlay.style.height = "100%";
+     fadeOverlay.style.background = "black";
+     fadeOverlay.style.opacity = "0";
+     fadeOverlay.style.transition = "opacity 2s ease-in-out";
+     document.body.appendChild(fadeOverlay);
+
+     setTimeout(() => {
+       fadeOverlay.style.opacity = "1";
+     }, 10);
+
+     setTimeout(() => {
+       window.location.href = "context.html";
+     }, 2000);
+   }
+
+   document.getElementById("context").addEventListener("click", fadeToBlackAndRedirect);
+   document.getElementById("words_context").addEventListener("click", fadeToBlackAndRedirect);
+
   </script>
   </body>
