--- a/morning.html
+++ b/morning.html
@@ -51,6 +51,22 @@
 Context
 
   </pre>
+  <!-- <pre id="ascii-door">
+    __________
+   |          |
+   |          |
+   |          |
+   |          |
+   |          |
+   |          |
+   |        0 |
+   |          |
+   |          |
+   |          |
+   |          |
+   |          |
+ __|__________|
+</pre> -->
   <div id="container">
     <div id="container">
       <pre class="time" id="clock">
@@ -233,7 +249,7 @@ _!!!_________!!!__
       window.location.href = 'mirror.html';
     };
 
-    function fadeToBlackAndRedirect() {
+    function fadeToBlackAndRedirect1() {
       let fadeOverlay = document.createElement("div");
       fadeOverlay.style.position = "fixed";
       fadeOverlay.style.top = "0";
@@ -259,7 +275,7 @@ _!!!_________!!!__
       document.getElementById("dialogue-box").style.display = "none";
 
       if (option === 'A' || option === '2B' || option === '3A') {
-        fadeToBlackAndRedirect();
+        fadeToBlackAndRedirect1();
         return;
       }
 
@@ -280,7 +296,7 @@ _!!!_________!!!__
     }
 
     document.getElementById("dialogue-box4").onclick = function() {
-      fadeToBlackAndRedirect();
+      fadeToBlackAndRedirect1();
     };
 
     function fadeToBlackAndRedirect() {
